# bambu-prep

./: .gitignore  CONTRIBUTING.md  README.md  bambu_prep_config.example.toml  pyproject.toml
bambu_prep/: __init__.py  __main__.py  ams.py  auth.py  cli.py  config.py  dispatch.py  layout.py  makerworld.py  meshes.py  patch.py  plate.py  profiles.py  retarget.py  slice.py
tests/: test_ams.py  test_auth.py  test_config.py  test_dispatch.py  test_layout.py  test_makerworld.py  test_meshes.py  test_patch.py  test_plate.py  test_profiles.py  test_retarget.py  test_slice.py
